# cadical_itp

./: CMakeLists.txt  NEWS.md  configure
cmake/: PackageOptions.cmake
scripts/: build-and-test-all-configurations.sh  run-mobical-in-parallel.sh
src/: CMakeLists.txt  arena.cpp  cadical.hpp  congruence.cpp  contract.hpp  deduplicate.cpp  drup2itp.cpp  drup2itp.hpp  drup2itptypes.hpp  external.cpp  external_propagate.cpp  internal.cpp  internal.hpp  mobical.cpp  options.hpp  solver.cpp  version.cpp  vivify.cpp  warmup.cpp
